<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Acao1"
        android:gravity="center"
        android:background="@drawable/gradient_bg"
        android:orientation="vertical">


        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/name" />

        <Button
            android:id="@+id/buttonOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            app:backgroundTint="#E91E63" />

        <Button
            android:id="@+id/buttonCancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            app:backgroundTint="#E91E63" />



    </LinearLayout>
</layout>